# ar-book-labels

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  ar_labels_config.example.yaml  pyproject.toml
.github/workflows/: publish.yml
ar_book_labels/: __init__.py  __main__.py  cli.py  config.py  generator.py  layout.py
ar_book_labels/templates/: ar_template.xlsx
docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md
tests/: test_cli.py  test_config.py  test_generator.py  test_layout.py
