[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ar-book-labels"
version = "0.1.1"
description = "Generate printable Accelerated Reader book labels from an Excel spreadsheet."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "TonyBlur" },
]
keywords = ["accelerated-reader", "labels", "education", "printing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
dependencies = [
    "openpyxl>=3.0",
]

[project.scripts]
ar-book-labels = "ar_book_labels.cli:main"

[project.urls]
Homepage = "https://github.com/TonyBlur/ar-book-labels"
Issues = "https://github.com/TonyBlur/ar-book-labels/issues"

[tool.setuptools.packages.find]
include = ["ar_book_labels*"]

[tool.setuptools.package-data]
"ar_book_labels" = ["templates/*.xlsx"]
